--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   data:
     mongodb:
       uri: mongodb+srv://Nique:${MONGO_PASSWORD}@cluster0.ycq7571.mongodb.net/?retryWrites=true&w=majority
-      database: ${DB_NAME}
+      database: niquestore
   mail:
     host: ${MAIL_HOST}
     port: ${MAIL_PORT}
