--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 spring:
   data:
     mongodb:
-      uri: mongodb+srv://Nique:${MONGO_PASSWORD}@cluster0.ycq7571.mongodb.net/?retryWrites=true&w=majority
+      uri: mongodb+srv://Nique:${MONGO_PASSWORD}@cluster0.ycq7571.mongodb.net/?retryWrites=true&w=majority&ssl=true
       database: niquestore
   mail:
     host: ${MAIL_HOST}
