configuring yml files for db

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,8 @@
 server:
   port: 8081
 spring:
-  data:
-    mongodb:
-      uri: mongodb+srv://Nique:${MONGO_PASSWORD}@cluster0.ycq7571.mongodb.net/?retryWrites=true&w=majority&ssl=true
-      database: niquestore
+  profiles:
+    active: ${SPRING_PROFILE}
   mail:
     host: ${MAIL_HOST}
     port: ${MAIL_PORT}
